<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/label_title_home"
              android:textSize="36sp"
              android:textStyle="bold|italic"
              android:gravity="center"
              />

    <TextView
            style="@style/label"
            android:text="@string/label_home"/>

    <EditText
            android:hint="@string/club_home"
            style="@style/input" android:id="@+id/inputHome"/>

    <TextView
            style="@style/label"
            android:text="@string/label_away"/>

    <EditText
            android:hint="@string/club_away"
            style="@style/input" android:id="@+id/inputAway"/>

    <Button
            style="@style/button"
            android:text="@string/label_start_game" android:id="@+id/btStart"/>

</LinearLayout>